# learn-langchain

./: pyproject.toml
src/learn_langchain/: .env  chain.py  chat_models.py  prompt_template.py
src/learn_langchain/RAG/: chroma.py  preprocess.py
src/learn_langchain/RAG/documents/: terraform.txt
