[project]
name = "learn-langchain"
version = "0.1.0"
description = ""
authors = [
    {name = "Vignesh Kumar V",email = "vvigneshkumar@ssdiblr.sharp.co.in"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langchain (>=0.3.23,<0.4.0)"
]

[tool.poetry]
packages = [{include = "learn_langchain", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
